[package]
name = "yadb"
description = "Yet Another Directory Buster"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/izya4ka/yadb"
license = "GPL-3.0"
keywords = ["net", "scan", "web"]
default-run = "yadb-cli"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
reqwest = { version = "0.12.18", features = ["blocking"] }
thiserror = "2.0.12"
env_logger = "0.11"
console = "0.15.11"
url = "2.5.4"
anyhow = "1.0.98"
hashbrown = "0.15.4"
chrono = "0.4.41"
