[package]
name = "yadb"
description = "Yet Another Directory Buster"
version = "0.2.2"
edition = "2024"
readme = "README.md"
repository = "https://github.com/izya4ka/yadb"
license = "GPL-3.0"
keywords = ["net", "scan", "web"]
default-run = "yadb-cli"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
indicatif = "0.17.11"
thiserror = "2.0.12"
console = "0.15.11"
url = "2.5.4"
anyhow = "1.0.98"
chrono = "0.4.41"
ureq = "3.0.12"
